@@ -24,9 +24,6 @@ server {
     location ~ /mail {
         rewrite ^ https://$host$request_uri?;
     }
-    #location ~ /iredadmin {
-    #    rewrite ^ https://$host$request_uri?;
-    #}
 
     # Deny all attempts to access hidden files such as .htaccess.
     location ~ /\. {
@@ -50,6 +47,19 @@ server {
     ssl on;
     ssl_certificate PH_SSL_CERT_FILE;
     ssl_certificate_key PH_SSL_KEY_FILE;
+
+    # Deny all attempts to access hidden files such as .htaccess.
+    location ~ /\. {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
+
+    # Handling noisy favicon.ico messages
+    location = /favicon.ico {
+        access_log off;
+        log_not_found off;
+    }
 
     # Roundcube webmail
     location ~ /mail(.*)\.php$ {
@@ -89,6 +99,7 @@ server {
     location ~ ^/iredadmin/static/(.*)\.(png|jpg|gif|css|js) {
         alias PH_IREDADMIN_HTTPD_ROOT_SYMBOL_LINK/static/$1.$2;
     }
+
     # iRedAdmin: Python scripts
     location ~ ^/iredadmin(.*) {
         rewrite ^/iredadmin(/.*)$ $1 break;
