@@ -1,9 +1,12 @@
-iRedMail-0.9.0-beta3:
+iRedMail-0.9.0:
     * Improvement:
         - Nginx support is now available on all Linux/BSD distributions.
         - MariaDB support is now available on FreeBSD.
         - New index in `amavisd` database for SQL column `policy.policy_name`.
           Required by iRedAdmin-Pro self-service.
+        - RHEL/CentOS:
+            + phpldapadmin is now installed from EPEL repo.
+            + Roundcubemail is installed from EPEL repo on RHEL/CentOS 7.
 
     * Fixed:
         - Set 'receive_override_options=no_address_mappings' in Postfix to
